# calculator

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test-code.yml
calculator/: calc.py
calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_calc.py
