[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator package."
readme = "README.md"
requires-python = ">=3.6, <4"  # Specify supported Python versions

[project.urls]
Homepage = "https://github.com/0xAJX/calculator"

[project.classifiers]
Programming Language :: Python :: 3
Programming Language :: Python :: 3.6
Programming Language :: Python :: 3.7
Programming Language :: Python :: 3.8
Programming Language :: Python :: 3.9
Programming Language :: Python :: 3.10
Programming Language :: Python :: 3.11
License :: OSI Approved :: MIT License